delete error comments (index.html)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!-- --------------------- -->
+<!-- +++++++++++++++++++++ -->
 <!-- LoftSchool project #1 -->
-<!-- AntonVoronezh ------- -->
-<!-- --------------------- -->
+<!--     AntonVoronezh     -->
+<!-- +++++++++++++++++++++ -->
 <!DOCTYPE html>
 <html lang="ru">
 
