modifyd fonts (main.css)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Tariffs</title>
 </head>
 
 <body>
@@ -328,11 +328,9 @@
             <div class="container">
                 <!-- start signature -->
                 <div class="footer__signature">
-                    Сделано с любовью и старанием
-                    <br>
-                    на курсе "HTML + CSS" в <strong>LoftSchool</strong>.
-                    <br>
-                    Автор работы: <strong>Глушенков Антон</strong>
+                    Сделано с любовью и старанием 
+                    на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
+                    Автор работы: <span class="bold">Глушенков Антон</span>
                 </div>
                 <!-- end signature -->
                 <!-- start logo -->
