--- a/comments.html
+++ b/comments.html
@@ -4,15 +4,21 @@
 <!-- +++++++++++++++++++++ -->
 <!DOCTYPE html>
 <html lang="ru-Ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/Normalize.css"
-    <link rel="stylesheet" href="css/main.css"
+    <link rel="stylesheet" href="css/Normalize.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Сomments</title>
 </head>
+
 <body>
-    
+<!--[if lt IE 8]>
+<p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http://browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
+<![endif]-->
+
 </body>
+
 </html>
