new markup (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -7,17 +7,52 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1100, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/Normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Сomments</title>
 </head>
 
 <body>
-<!--[if lt IE 8]>
+    <!--[if lt IE 8]>
 <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http://browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
 <![endif]-->
+
+    <!-- start wrapper -->
+    <div class="wrapper">
+        <!-- start wrapper content -->
+        <div class="wrapper__content">
+            <!-- start header -->
+            <header class="header">
+                <!-- start container -->
+                <div class="container">
+
+                </div>
+                <!-- end container -->
+            </header>
+            <!-- end header -->
+            <!-- start maincontent -->
+            <header class="header">
+                <!-- start container -->
+                <div class="container">
+ 
+                </div>
+                <!-- end container -->
+            </header>
+            <!-- end maincontent -->
+        </div>
+        <!-- end wrapper content -->
+        <!-- start footer -->
+        <footer class="footer">
+            <!-- start container -->
+            <div class="container">
+
+            </div>
+            <!-- end container -->
+        </footer>
+        <!-- end footer -->
+    </div>
+    <!-- end wrapper -->
 
 </body>
 
