add header (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -25,20 +25,78 @@
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
-                <div class="container">
-
+                <div class="container header__container">
+                    <!-- start header left -->
+                    <div class="header__left">
+                        <div class="logo">
+                            <a href="about.html" alt="тарифы компании" class="logo__link">
+                                <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- end header left -->
+                    <!-- start header right -->
+                    <div class="header__right">
+                        <!-- start header info -->
+                        <address class="headerinfo">
+                            <!-- start phone -->
+                            <div class="headerinfo__phone">
+                                <a href="tel:+78000039210" class="headerinfo__phone-link">8 (800) 00-392-10</a>
+                            </div>
+                            <!-- end phone -->
+                            <!-- start work schedule -->
+                            <div class="headerinfo__schedule">
+                                <button type="button" class="headerinfo__schedule-button">График работы</button>
+                            </div>
+                            <!-- end work schedule -->
+                        </address>
+                        <!-- end header info -->
+                    </div>
+                    <!-- end header right -->
                 </div>
                 <!-- end container -->
             </header>
             <!-- end header -->
             <!-- start maincontent -->
-            <header class="header">
+            <div class="maincontent">
                 <!-- start container -->
                 <div class="container">
- 
+                    <!-- start sidebar -->
+                    <aside class="aside">
+                        <nav class="maincontent__sidebar">
+                            <!-- start menu -->
+                            <div class="menu">
+                                <ul class="menu__list">
+                                    <li class="menu__item">
+                                        <a href="about.html" class="menu__link">
+                                            <div class="menu__icon icon-main">
+                                            </div>
+                                            <div class="menu__text">ГЛАВНАЯ</div>
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="comments.html" class="menu__link">
+                                            <div class="menu__icon icon-comments">
+                                            </div>
+                                            <div class="menu__text">ОТЗЫВЫ</div>
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="team.html" class="menu__link">
+                                            <div class="menu__icon icon-crew">
+                                            </div>
+                                            <div class="menu__text">ЭКИПАЖ</div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- end menu -->
+                        </nav>
+                    </aside>
+                    <!-- end sidebar -->
                 </div>
                 <!-- end container -->
-            </header>
+            </div>
             <!-- end maincontent -->
         </div>
         <!-- end wrapper content -->
