add section maincontent (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -60,10 +60,10 @@
             <!-- start maincontent -->
             <div class="maincontent">
                 <!-- start container -->
-                <div class="container">
+                <div class="container maincontent__container">
                     <!-- start sidebar -->
-                    <aside class="aside">
-                        <nav class="maincontent__sidebar">
+                    <aside class="maincontent__aside">
+                        <nav class="maincontent__aside-sidebar">
                             <!-- start menu -->
                             <div class="menu">
                                 <ul class="menu__list">
@@ -94,6 +94,58 @@
                         </nav>
                     </aside>
                     <!-- end sidebar -->
+                    <!-- start maincontent__main -->
+                    <main class="maincontent__main">
+                        <div class="big-photo">
+                            <img src="img/tariffs-icon/photo.png" alt="airplanet" class="big-central-photo">
+                        </div>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, quisquam sapiente.
+                        Voluptatibus laborum iste modi eligendi corporis cum culpa qui sit iure excepturi repudiandae
+                        perferendis nostrum eum sint, accusamus earum necessitatibus ab mollitia explicabo aperiam,
+                        dignissimos laboriosam quae. Fuga facilis cum placeat architecto doloribus voluptate dolores
+                        libero aliquid rem? Laborum eligendi sapiente esse quidem, delectus molestias dolorem
+                        distinctio molestiae quis aperiam ex reiciendis provident, perferendis, illum aliquid officia
+                        officiis veniam expedita harum doloremque cupiditate quasi? Blanditiis aperiam voluptatum
+                        facilis eveniet vitae, distinctio, rem, maiores accusamus fugit magnam consequuntur temporibus
+                        laudantium doloribus corrupti velit tenetur perferendis aut natus ut dolorem at? Debitis,
+                        molestiae? Aspernatur neque ullam voluptates error corrupti beatae repellendus. Quae aspernatur
+                        pariatur asperiores doloremque repellat fuga odit velit deserunt? Quasi voluptate ipsum
+                        adipisci iusto? Dolorum quasi temporibus optio rem pariatur. Quisquam nam iusto atque.
+                        Voluptate voluptas nam, vel neque assumenda, architecto esse harum sunt quasi, nobis nemo
+                        voluptatibus sed dicta! Numquam culpa, provident dolores asperiores nobis harum, officia omnis
+                        facere delectus corrupti fugit. Nam temporibus explicabo quas, laudantium minima voluptates
+                        sint. Atque, totam explicabo? Asperiores, a! Voluptas ex quidem sint sit eveniet nesciunt nihil
+                        amet commodi minima, ducimus modi laudantium, exercitationem excepturi hic molestias autem
+                        adipisci repudiandae cum tempora ab. Veritatis dignissimos sit officia eos delectus
+                        accusantium, reiciendis cupiditate, ullam, rem repellat assumenda nesciunt veniam quisquam
+                        maiores deserunt ipsa illo repellendus! Unde possimus, minus, error quisquam veritatis, totam
+                        maiores quia id fuga enim dolorem nemo cum asperiores hic ad? Maxime neque, amet, iste fugiat
+                        quae maiores excepturi consequuntur ab cum molestiae error harum dolorum sequi illum facilis
+                        nemo possimus. Magnam, et cumque amet dolorem aliquid, quis expedita at quidem ex earum quas,
+                        architecto non quae animi alias explicabo nobis. Aliquid optio quam voluptatibus, totam
+                        voluptate mollitia laboriosam. Totam iste placeat quis adipisci. Inventore, provident unde?
+                        Praesentium nihil corporis nisi minus natus, veritatis beatae doloremque laboriosam ullam
+                        accusantium modi necessitatibus repudiandae aspernatur, debitis ducimus, unde cum doloribus
+                        delectus omnis eligendi esse dignissimos tempora saepe explicabo. Velit cum inventore itaque
+                        consequuntur aliquid sapiente ad excepturi distinctio odio. Eos, placeat sint, delectus quae
+                        esse nemo deserunt quidem architecto mollitia fugiat alias tempore deleniti nulla id impedit
+                        aliquid consequuntur ab similique nobis corrupti dolor libero ratione vero? Totam dicta
+                        inventore earum officia quibusdam, vitae sint rem ratione optio labore, dolor, fugit dolore
+                        quia! Esse minima, nulla aliquid, nemo ipsam consequuntur aspernatur accusantium adipisci
+                        sapiente maxime nam sit! Tempora ullam hic, incidunt recusandae pariatur distinctio at iste
+                        tempore commodi aliquam laborum fugiat sint fuga minima blanditiis officiis, quidem ipsum
+                        suscipit quam explicabo sit delectus! Maiores voluptate iste assumenda, sapiente quibusdam,
+                        dolorem officiis quod veniam officia facere aut vel minima enim sunt eum itaque optio, rerum
+                        dignissimos pariatur? Delectus voluptatibus illum incidunt, eius ratione facere expedita
+                        exercitationem officia assumenda eaque consequuntur. Rerum aliquid voluptate reiciendis
+                        dolorem, ipsum, impedit voluptates incidunt quis placeat maiores soluta voluptas. Molestias
+                        provident odit similique mollitia totam suscipit nobis velit sunt recusandae tempore animi
+                        ipsum, in id, ratione iste ad officia. Enim, voluptatibus eligendi atque ut reprehenderit illo
+                        voluptate repellendus facilis.
+
+
+                    </main>
+                    <!-- end maincontent__main -->
                 </div>
                 <!-- end container -->
             </div>
@@ -103,10 +155,30 @@
         <!-- start footer -->
         <footer class="footer">
             <!-- start container -->
-            <div class="container">
-
-            </div>
-            <!-- end container -->
+            <div class="container footer__container">
+                <!-- start signature -->
+                <div class="footer__left">
+                    Сделано с любовью и старанием
+                    на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
+                    Автор работы: <span class="bold">Глушенков Антон</span>
+                </div>
+                <!-- end signature -->
+                <!-- start logo -->
+                <div class="logo">
+                        <a href="about.html" alt="тарифы компании" class="logo__link">
+                            <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
+                        </a>
+                    </div>
+                <!-- end logo -->
+                <!-- start social network -->
+                <div class="footer__right">
+                    <!-- start social text -->
+                    <div class="footer__social-text">
+                        Наши социальные сети
+                    </div>
+                    <!-- end social text -->
+                </div>
+                <!-- end container -->
         </footer>
         <!-- end footer -->
     </div>
