add footer (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -28,7 +28,7 @@
                 <div class="container header__container">
                     <!-- start header left -->
                     <div class="header__left">
-                        <div class="logo">
+                        <div class="logo header__logo">
                             <a href="about.html" alt="тарифы компании" class="logo__link">
                                 <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
                             </a>
@@ -164,7 +164,7 @@
                 </div>
                 <!-- end signature -->
                 <!-- start logo -->
-                <div class="logo">
+                <div class="logo footer__logo">
                         <a href="about.html" alt="тарифы компании" class="logo__link">
                             <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
                         </a>
@@ -177,6 +177,37 @@
                         Наши социальные сети
                     </div>
                     <!-- end social text -->
+                     <!-- start social pictures -->
+                     <div class="footer__social-pictures">
+                            <ul class="social-pictures-list">
+                                <li class="social-pictures-item">
+                                    <a href="#" class="social-pictures-link">
+                                        <div class="social-picture-icon vk"></div>
+                                    </a>
+                                </li>
+                                <li class="social-pictures-item">
+                                    <a href="#" class="social-pictures-link">
+                                        <div class="social-picture-icon fb"></div>
+                                    </a>
+                                </li>
+                                <li class="social-pictures-item">
+                                    <a href="#" class="social-pictures-link">
+                                        <div class="social-picture-icon google"></div>
+                                    </a>
+                                </li>
+                                <li class="social-pictures-item">
+                                    <a href="#" class="social-pictures-link">
+                                        <div class="social-picture-icon twitter"></div>
+                                    </a>
+                                </li>
+                                <li class="social-pictures-item">
+                                    <a href="mailto:example@mail.ru" class="social-pictures-link">
+                                        <div class="social-picture-icon mail"></div>
+                                    </a>
+                                </li>
+                                </ul>
+                        </div>
+                        <!-- end social pictures -->
                 </div>
                 <!-- end container -->
         </footer>
