add menu (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -63,33 +63,28 @@
                 <div class="container maincontent__container">
                     <!-- start sidebar -->
                     <aside class="maincontent__aside">
-                        <nav class="maincontent__aside-sidebar">
+                        <nav class="navigation">
                             <!-- start menu -->
-                            <div class="menu">
-                                <ul class="menu__list">
-                                    <li class="menu__item">
-                                        <a href="about.html" class="menu__link">
-                                            <div class="menu__icon icon-main">
-                                            </div>
-                                            <div class="menu__text">ГЛАВНАЯ</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="comments.html" class="menu__link">
-                                            <div class="menu__icon icon-comments">
-                                            </div>
-                                            <div class="menu__text">ОТЗЫВЫ</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu__item">
-                                        <a href="team.html" class="menu__link">
-                                            <div class="menu__icon icon-crew">
-                                            </div>
-                                            <div class="menu__text">ЭКИПАЖ</div>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="about.html" class="menu__link">
+                                        <div class="menu__icon menu__icon--main"></div>
+                                        <div class="menu__text">ГЛАВНАЯ</div>
+                                    </a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="comments.html" class="menu__link">
+                                        <div class="menu__icon menu__icon--comments"></div>
+                                        <div class="menu__text">ОТЗЫВЫ</div>
+                                    </a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="team.html" class="menu__link">
+                                        <div class="menu__icon menu__icon--crew"></div>
+                                        <div class="menu__text">ЭКИПАЖ</div>
+                                    </a>
+                                </li>
+                            </ul>
                             <!-- end menu -->
                         </nav>
                     </aside>
@@ -165,49 +160,49 @@
                 <!-- end signature -->
                 <!-- start logo -->
                 <div class="logo footer__logo">
-                        <a href="about.html" alt="тарифы компании" class="logo__link">
-                            <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
-                        </a>
-                    </div>
+                    <a href="about.html" alt="тарифы компании" class="logo__link">
+                        <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
+                    </a>
+                </div>
                 <!-- end logo -->
                 <!-- start social network -->
                 <div class="footer__right">
                     <!-- start social text -->
-                    <div class="footer__social-text">
+                    <div class="footer__right-text">
                         Наши социальные сети
                     </div>
                     <!-- end social text -->
-                     <!-- start social pictures -->
-                     <div class="footer__social-pictures">
-                            <ul class="social-pictures-list">
-                                <li class="social-pictures-item">
-                                    <a href="#" class="social-pictures-link">
-                                        <div class="social-picture-icon vk"></div>
-                                    </a>
-                                </li>
-                                <li class="social-pictures-item">
-                                    <a href="#" class="social-pictures-link">
-                                        <div class="social-picture-icon fb"></div>
-                                    </a>
-                                </li>
-                                <li class="social-pictures-item">
-                                    <a href="#" class="social-pictures-link">
-                                        <div class="social-picture-icon google"></div>
-                                    </a>
-                                </li>
-                                <li class="social-pictures-item">
-                                    <a href="#" class="social-pictures-link">
-                                        <div class="social-picture-icon twitter"></div>
-                                    </a>
-                                </li>
-                                <li class="social-pictures-item">
-                                    <a href="mailto:example@mail.ru" class="social-pictures-link">
-                                        <div class="social-picture-icon mail"></div>
-                                    </a>
-                                </li>
-                                </ul>
-                        </div>
-                        <!-- end social pictures -->
+                    <!-- start social  -->
+                    <div class="footer__social">
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <a href="#" class="social-link">
+                                    <div class="social-icon social-icon--vk"></div>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="#" class="social-link">
+                                    <div class="social-icon social-icon--fb"></div>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="#" class="social-link">
+                                    <div class="social-icon social-icon--google"></div>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="#" class="social-link">
+                                    <div class="social-icon social-icon--twitter"></div>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="mailto:example@mail.ru" class="social-link">
+                                    <div class="social-icon social-icon--mail"></div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- end social  -->
                 </div>
                 <!-- end container -->
         </footer>
