--- a/index.html
+++ b/index.html
@@ -268,50 +268,50 @@
                                 Страница 1 из 7
                             </div>
                             <!-- start pagination elements -->
-                            <ul class="pagination__elements">
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">&lt;</div>
+                            <ul class="pagination__list">
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">&lt;</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">1</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap pagination__item-wrap--active">1</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">2</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">2</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">3</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">3</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">4</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">4</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">5</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">5</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">6</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">6</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">7</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">7</div>
                                     </a>
                                 </li>
-                                <li class="pagination__element">
-                                    <a href="#" class="pagination__element-link">
-                                        <div class="pagination__element-wrap">&gt;</div>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__item-link">
+                                        <div class="pagination__item-wrap">&gt;</div>
                                     </a>
                                 </li>
 
