--- a/comments.html
+++ b/comments.html
@@ -69,19 +69,19 @@
                                 <li class="menu__item">
                                     <a href="about.html" class="menu__link">
                                         <div class="menu__icon menu__icon--main"></div>
-                                        <div class="menu__text">ГЛАВНАЯ</div>
+                                        <div class="menu__text">главная</div>
                                     </a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="comments.html" class="menu__link">
                                         <div class="menu__icon menu__icon--comments"></div>
-                                        <div class="menu__text">ОТЗЫВЫ</div>
+                                        <div class="menu__text">отзывы</div>
                                     </a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="team.html" class="menu__link">
                                         <div class="menu__icon menu__icon--crew"></div>
-                                        <div class="menu__text">ЭКИПАЖ</div>
+                                        <div class="menu__text">экипаж</div>
                                     </a>
                                 </li>
                             </ul>
@@ -91,9 +91,22 @@
                     <!-- end sidebar -->
                     <!-- start maincontent__main -->
                     <main class="maincontent__main">
-                        <div class="big-photo">
-                            <img src="img/tariffs-icon/photo.png" alt="airplanet" class="big-central-photo">
-                        </div>
+                        <!-- start breadcrumbs -->
+                        <nav class="breadcrumbs">
+                            <ul class="breadcrumbs__list">
+                                <li class="breadcrumbs__item">
+                                   <a href="about.html" alt="Главная" class="breadcrumbs__link">Главная</a> 
+                                </li>
+                                <li class="breadcrumbs__item breadcrumbs__item--black breadcrumbs--slash">
+                                    /
+                                </li>
+                                <li class="breadcrumbs__item breadcrumbs__item--black">
+                                    Отзывы
+                                </li>
+                            </ul>
+                        </nav>
+                        <!-- end breadcrumbs -->
+                        <br><br><br>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, quisquam sapiente.
                         Voluptatibus laborum iste modi eligendi corporis cum culpa qui sit iure excepturi repudiandae
                         perferendis nostrum eum sint, accusamus earum necessitatibus ab mollitia explicabo aperiam,
