add section partners (team.html)

--- a/team.html
+++ b/team.html
@@ -252,6 +252,39 @@
                             </ul>
                         </section>
                         <!-- end team -->
+                        <!-- start partners -->
+                        <section class="partners">
+                            <h2 class="title-h">
+                                Партнеры
+                            </h2>
+                            <!-- start line 1 -->
+                            <ul class="partners__list">
+                                <li class="partners__item">
+                                    <img src="img/logotypes/bmp.png" alt="партнер" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="img/logotypes/tetra.png" alt="партнер" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="img/logotypes/sibirian.png" alt="партнер" class="partners__img">
+                                </li>
+                            </ul>
+                            <!-- end line 1 -->
+                            <!-- start line 2 -->
+                            <ul class="partners__list partners__list--bottom">
+                                    <li class="partners__item">
+                                        <img src="img/logotypes/oneair.png" alt="партнер" class="partners__img">
+                                    </li>
+                                    <li class="partners__item">
+                                        <img src="img/logotypes/Vector Smart Object (3).png" alt="партнер" class="partners__img">
+                                    </li>
+                                    <li class="partners__item">
+                                        <img src="img/logotypes/ural.png" alt="партнер" class="partners__img">
+                                    </li>
+                                </ul>
+                            <!-- end line 2 -->
+                        </section>
+                        <!-- end partners -->
                     </main>
                     <!-- end maincontent__main -->
                 </div>
