rename modificators icons in section tariffs (index.html)

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <ul class="tariffs__list">
                                 <li class="tariffs__item">
                                     <!-- start 1 element -->
-                                    <div class="tariffs__item-icon icon-standart"></div>
+                                    <div class="tariffs__item-icon tariffs__item-icon--standart"></div>
                                     <h3 class="tariffs__item-name">
                                         СТАНДАРТ
                                     </h3>
@@ -128,7 +128,7 @@
                                 </li>
                                 <li class="tariffs__item">
                                     <!-- start 2 element -->
-                                    <div class="tariffs__item-icon icon-premium"></div>
+                                    <div class="tariffs__item-icon tariffs__item-icon--premium"></div>
                                     <h3 class="tariffs__item-name">
                                         ПРЕМИУМ
                                     </h3>
@@ -153,7 +153,7 @@
                                 </li>
                                 <li class="tariffs__item">
                                     <!-- start 3 element -->
-                                    <div class="tariffs__item-icon icon-laksheri"></div>
+                                    <div class="tariffs__item-icon tariffs__item-icon--laksheri"></div>
                                     <h3 class="tariffs__item-name">
                                         ЛАКШЕРИ
                                     </h3>
